fix id of kinoppyd

--- a/kaigi01/index.html
+++ b/kaigi01/index.html
@@ -374,7 +374,7 @@ description: 【平成世代縛りナシ、令和元年最後の地域Ruby会議
               </figure>
               <div class="schedules_main_item_body_txt">
                 <div class="tag_session">session</div>
-                <p>@kinoppyde</p>
+                <p>@kinoppyd</p>
                 <h4>Ruby力を上げるためのコードリーディング</h4>
               </div>
             </div>
