--- a/kaigi01/index.html
+++ b/kaigi01/index.html
@@ -31,7 +31,7 @@ description: 【平成世代縛りナシ、令和元年最後の地域Ruby会議
             <li class="header_nav_item">
               <p onclick="smoothScroll(document.getElementById('spns'))">sponsors</p>
             </li>
-            <li class="header_nav_item btn_nav btn_comming">
+            <li class="header_nav_item btn_nav btn_main">
               <a href="https://heiseirb.connpass.com/event/151414/" target="_blank">registration</a>
             </li>
           </ul>
@@ -172,7 +172,7 @@ description: 【平成世代縛りナシ、令和元年最後の地域Ruby会議
       <div class="btn_cfp btn_comming">
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSdMMnPFGK4QsJtIkZ0QvoEsEbRXKJebNILGW-IYVzqbIOEBgw/viewform" target="_blank">become a speaker</a>
       </div>
-      <div class="btn_main tag_comming">
+      <div class="btn_main">
         <a href="https://heiseirb.connpass.com/event/151414/" target="_blank">registration</a>
       </div>
     </div>
