--- a/kaigi01/index.html
+++ b/kaigi01/index.html
@@ -440,7 +440,7 @@ description: 【平成世代縛りナシ、令和元年最後の地域Ruby会議
               <div class="schedules_main_item_body_txt">
                 <div class="tag_session">session</div>
                 <p>@shugo</p>
-                <h4>Rubyの動的な性質を活かす方法とTextbringerステッカー</h4>
+                <h4>TextbringerでつくるTextbringer</h4>
               </div>
             </div>
           </article><!--CALENDAR CARD-->
