add github link for speaker

--- a/kaigi01/index.html
+++ b/kaigi01/index.html
@@ -269,7 +269,7 @@ description: 【平成世代縛りナシ、令和元年最後の地域Ruby会議
               </figure>
               <div class="schedules_main_item_body_txt">
                 <div class="tag_session">session</div>
-                <p>@NagayamaRyoga</p>
+                <p><a href="https://github.com/NagayamaRyoga" class="github_link">@NagayamaRyoga</a></p>
                 <h4>Ruby2.7以降のiseqのバイナリ表現の改善について、Rubyアソシエーション開発助成金2019採択プロジェクトの途中経過について</h4>
               </div>
             </div>
@@ -284,7 +284,7 @@ description: 【平成世代縛りナシ、令和元年最後の地域Ruby会議
               </figure>
               <div class="schedules_main_item_body_txt">
                 <div class="tag_session">session</div>
-                <p>@yu_suke1994</p>
+                <p><a href="https://github.com/unasuke" class="github_link">@yu_suke1994</a></p>
                 <h4>あなたのそのgem、Windowsでも動きますか？</h4>
               </div>
             </div>
@@ -299,7 +299,7 @@ description: 【平成世代縛りナシ、令和元年最後の地域Ruby会議
               </figure>
               <div class="schedules_main_item_body_txt">
                 <div class="tag_session">session</div>
-                <p>@expajp</p>
+                <p><a href="https://github.com/expajp" class="github_link">@expajp</a></p>
                 <h4>ActiveSupport::Concernで開くメタプログラミングの扉</h4>
               </div>
             </div>
@@ -314,7 +314,7 @@ description: 【平成世代縛りナシ、令和元年最後の地域Ruby会議
               </figure>
               <div class="schedules_main_item_body_txt">
                 <div class="tag_session">session</div>
-                <p>@hotatekaoru</p>
+                <p><a href="https://github.com/hotatekaoru" class="github_link">@hotatekaoru</a></p>
                 <h4>Railsで事業立上げのリードエンジニアになるために</h4>
               </div>
             </div>
@@ -329,7 +329,7 @@ description: 【平成世代縛りナシ、令和元年最後の地域Ruby会議
               </figure>
               <div class="schedules_main_item_body_txt">
                 <div class="tag_session">session</div>
-                <p>@sanfrecce-osaka</p>
+                <p><a href="https://github.com/sanfrecce-osaka" class="github_link">@sanfrecce-osaka</a></p>
                 <h4>Procのススメ</h4>
               </div>
             </div>
@@ -344,7 +344,7 @@ description: 【平成世代縛りナシ、令和元年最後の地域Ruby会議
               </figure>
               <div class="schedules_main_item_body_txt">
                 <div class="tag_proposal">contents</div>
-                <p>@tashiro_rb</p>
+                <p><a href="https://github.com/tashirosota" class="github_link">@tashiro_rb</a></p>
                 <h4>モブプログラミング</h4>
               </div>
             </div>
@@ -359,7 +359,7 @@ description: 【平成世代縛りナシ、令和元年最後の地域Ruby会議
               </figure>
               <div class="schedules_main_item_body_txt">
                 <div class="tag_session">session</div>
-                <p>@ryamakuchi</p>
+                <p><a href="https://github.com/ryamakuchi" class="github_link">@ryamakuchi</a></p>
                 <h4>逃げちゃだめだ！RSpec を導入していく戦い</h4>
               </div>
             </div>
@@ -374,7 +374,7 @@ description: 【平成世代縛りナシ、令和元年最後の地域Ruby会議
               </figure>
               <div class="schedules_main_item_body_txt">
                 <div class="tag_session">session</div>
-                <p>@kinoppyd</p>
+                <p><a href="https://github.com/kinoppyd" class="github_link">@kinoppyd</a></p>
                 <h4>Ruby力を上げるためのコードリーディング</h4>
               </div>
             </div>
@@ -389,7 +389,7 @@ description: 【平成世代縛りナシ、令和元年最後の地域Ruby会議
               </figure>
               <div class="schedules_main_item_body_txt">
                 <div class="tag_session">session</div>
-                <p>@ayumitamai97</p>
+                <p><a href="https://github.com/ayumitamai97" class="github_link">@ayumitamai97</a></p>
                 <h4>階層的クラスタリングをRubyで表現する</h4>
               </div>
             </div>
@@ -404,7 +404,7 @@ description: 【平成世代縛りナシ、令和元年最後の地域Ruby会議
               </figure>
               <div class="schedules_main_item_body_txt">
                 <div class="tag_session">session</div>
-                <p>@Sean0628</p>
+                <p><a href="https://github.com/Sean0628" class="github_link">@Sean0628</a></p>
                 <h4>Play with Ruby</h4>
               </div>
             </div>
@@ -419,7 +419,7 @@ description: 【平成世代縛りナシ、令和元年最後の地域Ruby会議
               </figure>
               <div class="schedules_main_item_body_txt">
                 <div class="tag_session">session</div>
-                <p>@tkawa</p>
+                <p><a href="https://github.com/tkawa" class="github_link">@tkawa</a></p>
                 <h4>真のREST</h4>
               </div>
             </div>
@@ -439,7 +439,7 @@ description: 【平成世代縛りナシ、令和元年最後の地域Ruby会議
               </figure>
               <div class="schedules_main_item_body_txt">
                 <div class="tag_session">session</div>
-                <p>@shugo</p>
+                <p><a href="https://github.com/shugo" class="github_link">@shugo</a></p>
                 <h4>TextbringerでつくるTextbringer</h4>
               </div>
             </div>
@@ -454,7 +454,7 @@ description: 【平成世代縛りナシ、令和元年最後の地域Ruby会議
               </figure>
               <div class="schedules_main_item_body_txt">
                 <div class="tag_session">session</div>
-                <p>@fujimura</p>
+                <p><a href="https://github.com/fujimura" class="github_link">@fujimura</a></p>
                 <h4>SimpleDelegator活用のご提案</h4>
               </div>
             </div>
@@ -469,7 +469,7 @@ description: 【平成世代縛りナシ、令和元年最後の地域Ruby会議
               </figure>
               <div class="schedules_main_item_body_txt">
                 <div class="tag_session">session</div>
-                <p>@AquaLamp</p>
+                <p><a href="https://github.com/AquaLamp" class="github_link">@AquaLamp</a></p>
                 <h4>Ruby on Jeeeeeeeeets!!✨🚀✨</h4>
               </div>
             </div>
@@ -484,7 +484,7 @@ description: 【平成世代縛りナシ、令和元年最後の地域Ruby会議
               </figure>
               <div class="schedules_main_item_body_txt">
                 <div class="tag_session">session</div>
-                <p>@sat0yu</p>
+                <p><a href="https://github.com/sat0yu" class="github_link">@sat0yu</a></p>
                 <h4>Async/Await functions in Ruby</h4>
               </div>
             </div>
@@ -499,7 +499,7 @@ description: 【平成世代縛りナシ、令和元年最後の地域Ruby会議
               </figure>
               <div class="schedules_main_item_body_txt">
                 <div class="tag_session">session</div>
-                <p>@cobafan</p>
+                <p><a href="https://github.com/cobafan" class="github_link">@cobafan</a></p>
                 <h4>既存RailsApplicationの高速化</h4>
               </div>
             </div>
@@ -514,7 +514,7 @@ description: 【平成世代縛りナシ、令和元年最後の地域Ruby会議
               </figure>
               <div class="schedules_main_item_body_txt">
                 <div class="tag_session">Session</div>
-                <p>@daikimiura</p>
+                <p><a href="https://github.com/daikimiura" class="github_link">@daikimiura</a></p>
                 <h4>RubyでJVMを実装してみる</h4>
               </div>
             </div>
@@ -543,7 +543,7 @@ description: 【平成世代縛りナシ、令和元年最後の地域Ruby会議
               </figure>
               <div class="schedules_main_item_body_txt">
                 <div class="tag_session">session</div>
-                <p>@MITSUBOSHI</p>
+                <p><a href="https://github.com/MITSUBOSHI" class="github_link">@MITSUBOSHI</a></p>
                 <h4>Good to know YAML</h4>
               </div>
             </div>
@@ -558,7 +558,7 @@ description: 【平成世代縛りナシ、令和元年最後の地域Ruby会議
               </figure>
               <div class="schedules_main_item_body_txt">
                 <div class="tag_session">session</div>
-                <p>@atomiyama</p>
+                <p><a href="https://github.com/atomiyama" class="github_link">@atomiyama</a></p>
                 <h4>rustで拡張モジュールを作成してgemにする</h4>
               </div>
             </div>
@@ -573,7 +573,7 @@ description: 【平成世代縛りナシ、令和元年最後の地域Ruby会議
               </figure>
               <div class="schedules_main_item_body_txt">
                 <div class="tag_session">session</div>
-                <p>@ikaruga777</p>
+                <p><a href="https://github.com/ikaruga777" class="github_link">@ikaruga777</a></p>
                 <h4>やわらか増税 〜はじめての増税対応〜</h4>
               </div>
             </div>
@@ -588,7 +588,7 @@ description: 【平成世代縛りナシ、令和元年最後の地域Ruby会議
               </figure>
               <div class="schedules_main_item_body_txt">
                 <div class="tag_session">session</div>
-                <p>@mtkasima</p>
+                <p><a href="https://github.com/mtkasima" class="github_link">@mtkasima</a></p>
                 <h4>ActiveRecordのpluckメソッドがおかしな挙動をしたので調べてみた</h4>
               </div>
             </div>
@@ -603,7 +603,7 @@ description: 【平成世代縛りナシ、令和元年最後の地域Ruby会議
               </figure>
               <div class="schedules_main_item_body_txt">
                 <div class="tag_session">session</div>
-                <p>@pocke</p>
+                <p><a href="https://github.com/pocke" class="github_link">@pocke</a></p>
                 <h4>Regression Test for RuboCop</h4>
               </div>
             </div>
@@ -626,7 +626,7 @@ description: 【平成世代縛りナシ、令和元年最後の地域Ruby会議
             </figure>
             <div class="schedules_main_item_body_txt">
               <div class="tag_keynote">keynote</div>
-              <p>@yui-knk</p>
+              <p><a href="https://github.com/yui-knk" class>@yui-knk</a></p>
               <h4>What is expected?</h4>
             </div>
           </div>
@@ -666,7 +666,7 @@ description: 【平成世代縛りナシ、令和元年最後の地域Ruby会議
             </figure>
             <div class="schedules_main_item_body_txt">
               <div class="tag_keynote">keynote</div>
-              <p>@koic</p>
+              <p><a href="https://github.com/koic" class="github_link">@koic</a></p>
               <h4>Breaking Change</h4>
             </div>
           </div>
