--- a/kaigi01/index.html
+++ b/kaigi01/index.html
@@ -708,60 +708,60 @@ description: 【平成世代縛りナシ、令和元年最後の地域Ruby会議
   </div>
   <div class="spns_col spns_col_4">
     <div class="spns_item">
-      <!-- <a href="" target="_blank"> -->
-        <figure class="spns_thm __hiring">
-          <!-- <img src="{{ '/assets/kaigi01/logo_sponsers01.jpg?v=' | append: site.github.build_revision | relative_url }}" alt=""> -->
+       <a href="https://timee.co.jp/" target="_blank">
+        <figure class="spns_thm">
+           <img src="{{ '/assets/kaigi01/logo_taimee.png?v=' | append: site.github.build_revision | relative_url }}" alt="">
         </figure>
-      <!-- </a> -->
-      <!-- <a class="spns_txt" href="" target="_blank">株式会社 会社名</a> -->
+       </a>
+       <a class="spns_txt" href="https://timee.co.jp/" target="_blank">株式会社タイミー</a>
     </div><!--.spns_item-->
     <div class="spns_item">
-      <!-- <a href="" target="_blank"> -->
-        <figure class="spns_thm __hiring">
-          <!-- <img src="{{ '/assets/kaigi01/logo_sponsers01.jpg?v=' | append: site.github.build_revision | relative_url }}" alt=""> -->
+       <a href="https://fril.jp/" target="_blank">
+        <figure class="spns_thm">
+           <img src="{{ '/assets/kaigi01/logo_rakuten?v=' | append: site.github.build_revision | relative_url }}" alt="">
         </figure>
-      <!-- </a>  -->
-      <!-- <a class="spns_txt" href="" target="_blank">株式会社 会社名</a> -->
+       </a>
+       <a class="spns_txt" href="https://fril.jp/" target="_blank">楽天株式会社</a>
     </div><!--.spns_item-->
     <div class="spns_item">
-      <!-- <a href="" target="_blank"> -->
-        <figure class="spns_thm __hiring">
-          <!-- <img src="{{ '/assets/kaigi01/logo_sponsers01.jpg?v=' | append: site.github.build_revision | relative_url }}" alt=""> -->
+       <a href="https://smartcamp.co.jp/" target="_blank">
+        <figure class="spns_thm">
+           <img src="{{ '/assets/kaigi01/logo_smartcamp.svg?v=' | append: site.github.build_revision | relative_url }}" alt="">
         </figure>
-      <!-- </a> -->
-      <!-- <a class="spns_txt" href="" target="_blank">株式会社 会社名</a> -->
+       </a>
+       <a class="spns_txt" href="https://smartcamp.co.jp/" target="_blank">スマートキャンプ株式会社</a>
     </div><!--.spns_item-->
     <div class="spns_item">
-      <!-- <a href="" target="_blank"> -->
-        <figure class="spns_thm __hiring">
-          <!-- <img src="{{ '/assets/kaigi01/logo_sponsers01.jpg?v=' | append: site.github.build_revision | relative_url }}" alt=""> -->
+       <a href="https://opt-technologies.jp/" target="_blank">
+        <figure class="spns_thm">
+           <img src="{{ '/assets/kaigi01/logo_opt?v=' | append: site.github.build_revision | relative_url }}" alt="" class="_shrink">
         </figure>
-      <!-- </a> -->
-      <!-- <a class="spns_txt" href="" target="_blank">株式会社 会社名</a> -->
+       </a>
+       <a class="spns_txt" href="https://opt-technologies.jp/" target="_blank">株式会社オプト</a>
     </div><!--.spns_item-->
     <div class="spns_item">
-      <!-- <a href="" target="_blank"> -->
-        <figure class="spns_thm __hiring">
-          <!-- <img src="{{ '/assets/kaigi01/logo_sponsers01.jpg?v=' | append: site.github.build_revision | relative_url }}" alt=""> -->
+       <a href="https://medpeer.co.jp/" target="_blank">
+        <figure class="spns_thm">
+           <img src="{{ '/assets/kaigi01/logo_medpeer.png?v=' | append: site.github.build_revision | relative_url }}" alt="">
         </figure>
-      <!-- </a> -->
-      <!-- <a class="spns_txt" href="" target="_blank">株式会社 会社名</a> -->
+       </a>
+       <a class="spns_txt" href="https://medpeer.co.jp/" target="_blank">メドピア株式会社</a>
     </div><!--.spns_item-->
     <div class="spns_item">
-      <!-- <a href="" target="_blank"> -->
-        <figure class="spns_thm __hiring">
-          <!-- <img src="{{ '/assets/kaigi01/logo_sponsers01.jpg?v=' | append: site.github.build_revision | relative_url }}" alt=""> -->
+       <a href="http://smarthr.co.jp/" target="_blank">
+        <figure class="spns_thm">
+           <img src="{{ '/assets/kaigi01/logo_smarthr.png?v=' | append: site.github.build_revision | relative_url }}" alt="">
         </figure>
-      <!-- </a> -->
-      <!-- <a class="spns_txt" href="" target="_blank">株式会社 会社名</a> -->
+       </a>
+       <a class="spns_txt" href="http://smarthr.co.jp/" target="_blank">株式会社SmartHR</a>
     </div><!--.spns_item-->
     <div class="spns_item">
-      <!-- <a href="" target="_blank"> -->
-        <figure class="spns_thm __hiring">
-          <!-- <img src="{{ '/assets/kaigi01/logo_sponsers01.jpg?v=' | append: site.github.build_revision | relative_url }}" alt=""> -->
+       <a href="https://www.machimachi.co.jp/" target="_blank">
+        <figure class="spns_thm">
+           <img src="{{ '/assets/kaigi01/logo_machimachi.svg?v=' | append: site.github.build_revision | relative_url }}" alt="">
         </figure>
-      <!-- </a> -->
-      <!-- <a class="spns_txt" href="" target="_blank">株式会社 会社名</a> -->
+       </a>
+       <a class="spns_txt" href="https://www.machimachi.co.jp/" target="_blank">株式会社マチマチ</a>
     </div><!--.spns_item-->
   </div>
 </section>
