Replace logo_rakuten

--- a/kaigi01/index.html
+++ b/kaigi01/index.html
@@ -718,7 +718,7 @@ description: 【平成世代縛りナシ、令和元年最後の地域Ruby会議
     <div class="spns_item">
        <a href="https://fril.jp/" target="_blank">
         <figure class="spns_thm">
-           <img src="{{ '/assets/kaigi01/logo_rakuten?v=' | append: site.github.build_revision | relative_url }}" alt="">
+           <img src="{{ '/assets/kaigi01/logo_rakuten.jpg?v=' | append: site.github.build_revision | relative_url }}" alt="">
         </figure>
        </a>
        <a class="spns_txt" href="https://fril.jp/" target="_blank">楽天株式会社</a>
