--- a/kaigi01/index.html
+++ b/kaigi01/index.html
@@ -2,7 +2,7 @@
 layout: kaigi01
 image: /assets/kaigi01/ogp.jpg
 title: 平成Ruby会議 01
-description: 【平成世代縛りナシ、令和元年最後の地域Ruby会議】全21枠のスピーカーを選考中です!
+description: 2トラック全21セッションの令和元年最後の地域Ruby会議
 ---
 
 <section class="keyVisual">
